web3-login/services/executor/k8s/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: executor-1
  namespace: staging
  labels:
    repo: executor
spec:
  selector:
    app: executor-1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: executor-2
  namespace: staging
  labels:
    repo: executor
spec:
  selector:
    app: executor-2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
