web3-login/services/executor/k8s/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: executor
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    repo: executor
spec:
  rules:
    - host: node-4.social-login.orai.io
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: executor-1-service
                port:
                  number: 80
    - host: node-5.social-login.orai.io
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: executor-2-service
                port:
                  number: 80
